overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -123,7 +123,8 @@ h1{
 }
 @media (max-width: 768px) {
   html{
-    overflow:hidden;
+    overflow-y:hidden;
+    overflow-x: hidden;
   }
 
   h1{
